Prepare for test deployment
